# nmotd

./: Cargo.toml  LICENSE-MIT  README.md  justfile
src/: disks.rs  docker.rs  format_num.rs  kernel.rs  main.rs  process.rs  sys.rs  systemd.rs
src/quotes/: array.rs  mod.rs  quotes.rs  vec.rs
src/services/: docker.rs  mod.rs  systemd.rs
src/sys/: disks.rs  format_num.rs  hostname.rs  mod.rs  os_release.rs  process.rs  uptime.rs
src/ui/: app.rs  layout.rs  mod.rs
