[package]
name = "nmotd"
version = "0.1.0"
authors = ["Th3Whit3Wolf <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal_size = "0.1.11"
cupid = "0.6.1"
libc = "0.2.68"
ansi_term = "0.12"
procfs = "0.7.8"
dbus   =  "0.8.2"
rand = "0.7"
textwrap = "0.11"

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]