[package]
name = "nmotd"
version = "0.1.0"
authors = ["Th3Whit3Wolf <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.68"
procfs = "0.7.8"
dbus   =  "0.8.2"
rand = "0.7"
termion = "1.5.0"


[dependencies.textwrap]
version = "0.11"
optional = true

[dependencies.tui]
version = "0.9.0"
optional = true

[features]
default = ["ui"]
terminal = ["textwrap"]
ui = ["tui"]

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test"]
